add values to configure tomcat heap memory